# TracciaFinanze

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  main.cpp  vcpkg.json
Core/: Application.cpp  Application.h  Component.cpp  Component.h  ComponentStack.cpp  ComponentStack.h  ExpencesManager.cpp  ExpencesManager.h  ExpensesManager.cpp  ExpensesManager.h  ImGuiLayer.cpp  ImGuiLayer.h  Theme.h  Window.cpp  Window.h  base.h
Core/Components/: AddExpenseComponent.cpp  AddExpenseComponent.h  ExpensesView.cpp  ExpensesView.h  SingleExpenseView.cpp  SingleExpenseView.h
